force-app/main/default/objects/PDF_ESignature_Envelope__c/PDF_ESignature_Envelope__c.object-meta.xml
<CustomObject>
    <description>PDF-first e-signature package object.</description>
    <label>PDF E-Signature Envelope</label>
    <nameField>
        <displayFormat>PESENV-{000000}</displayFormat>
        <label>PDF E-Signature Envelope Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDF E-Signature Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>