force-app/main/default/objects/PDF_ESignature_Envelope__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>E-Signature Envelopes</relationshipLabel>
    <relationshipName>PDF_ESignature_Account_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>