force-app/main/default/objects/PDF_ESignature_Envelope__c/fields/Final_ContentDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_ContentDocument_Id__c</fullName>
    <label>Final ContentDocument Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>