force-app/main/default/objects/PDF_ESignature_Envelope__c/fields/Finalizer_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Request_Id__c</fullName>
    <label>Finalizer Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>