force-app/main/default/objects/PDF_ESignature_Envelope__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PDF E-Signature Envelopes</relationshipLabel>
    <relationshipName>PDF_ESignature_Opportunity_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>