force-app/main/default/objects/PDF_ESignature_Envelope__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>PDF E-Signature Envelopes</relationshipLabel>
    <relationshipName>PDF_ESignature_Work_Order_Envelopes</relationshipName>
    <type>Lookup</type>
</CustomField>